[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.4.0"
authors = ["Petr Benes <w.benny@outlook.com>"]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.85.0"

[workspace.dependencies]
bitflags = "2"
libc = "0.2"
thiserror = "2.0"
tracing = "0.1"

kvm-sys = { path = "./crates/kvm-sys", version = "0.4.0", package = "libkvm-sys" }

[profile.release]
debug = 1

################################################################################
# Root package (safe wrapper)
################################################################################

[package]
name = "libkvm"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }
description = "Safe bindings for KVM VMI ioctls"

[lib]
name = "kvm"

[dependencies]
bitflags = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
kvm-sys = { workspace = true }
