[package]
name = "libkvm-sys"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Rust FFI bindings for the KVM VMI uAPI"
keywords = [
    "kvm",
    "vmi",
]
categories = ["external-ffi-bindings"]

links = "kvm_vmi"
build = "build.rs"

[lib]
name = "kvm_sys"

[dependencies]

[build-dependencies]
bindgen = "0.72.1"

[features]
default = []
